# Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  ITCH_Messages.hpp  OUCH_Messages.hpp  OUCH_Parser.hpp  Order_Book.cpp  Order_Book.hpp  Parser.hpp  README.md  Types.hpp  main.cpp
Docs/: 001-itch-out-protocol-baseline.md
Docs/braindumps/: 2026-02-16to20-SFN7122-setup-troubleshooting  2026-03-04_rx_path_nic_to_epoll.txt  2026-03-05-udp-tcp-connection-establishment  2026-03-06-kernel-overhead-and-tcp-streams
Docs/devlogs/: -001-hardware-diagnostics-sn7122f.md  001-itch-out-protocol-baseline.md  002-ouch-finish.md  003-itch-tcp-mock-exchange.md  004-network-stack-final-syscall-avoidance-mvp.md  005-ring-buffer-async-log-order-book-architecture.md
common/: ITCH_Messages.hpp  Logger.hpp  OUCH_Messages.hpp  OUCH_Parser.hpp  Types.hpp
mock_exchange/: CMakeLists.txt  main.cpp
trading_engine/: CMakeLists.txt  OUCH_Parser.hpp  Order_Book.cpp  Order_Book.hpp  Parser.hpp  main.cpp
